syntax = "proto3";

package UnitTests;

message MessageWithoutOptions {
  string Message = 1;
}
